IDEMPIERE-6820 Add multi tenant support to SSO (DAD-209) (#3190)
* IDEMPIERE-6820 Add multi tenant support to SSO (DAD-209)

- Fix SSO_SHOW_LOGINPAGE=Y not working correctly

* IDEMPIERE-6820 Add multi tenant support to SSO (DAD-209)

- address coderabbitai review